<resources>
    <string name="app_name">Call Center</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="url">Enter Server Name</string>
    <string name="login">Done</string>
    <string name="loginMessage">Enter Your Login Credentials</string>
    <string name="CSQ_default">Log In</string>
    <string name="refresh">Refresh</string>
    <string name="content_description">Description</string>
    <string name="default_time">00:00:00</string>
    <string name="oldest_in_queue">Oldest Call In Queue:&#160;</string>
    <string name="calls_in_queue">Calls In Queue:&#160;</string>
    <string name="zero">0</string>
    <string name="calls_in_queue_separator">&#160;/&#160;</string>
    <string name="add_to_queue">Add To Queue</string>
</resources>
